name: foreign-jni
version: 0.1.0.0
synopsis: A binding to the Java Native Interface (JNI)
description:
  .
  Haskell bindings to the Java Native Interface. Ideal for writing
  Java native methods in Haskell.
  .
  If the JNI C header files are not in your C compiler's include path,
  you should export $JAVA_HOME before running cabal install or
  configure.
  .
  If you use functions in Foreign.JNI.Lookup you must first call
  either hs_set_java_vm from C (probably in JNI_OnLoad) or setJavaVM
  from Haskell.
  .
homepage: https://github.com/neurocyte/foreign-jni
license: BSD3
license-file: LICENSE
author: C. J. van den Berg
maintainer: cj@vdbonline.com
copyright: 2013 C. J. van den Berg
category: Foreign
build-type: Configure
cabal-version: >=1.8

source-repository head
  type: git
  location: https://github.com/neurocyte/foreign-jni.git

library
  exposed-modules:
    Foreign.JNI
    Foreign.JNI.Lookup
  ghc-options: -Wall -O2
  hs-source-dirs: src
  build-depends: base < 4.8, transformers, mtl, text
